[project]
name = "distributors-backend"
description = "A barebones python app"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "dotenv==0.9.*",
    "fastapi[standard]==0.116.*",
    "pydantic-settings==2.10.*",
    "pyjks==20.0.*",
    "requests==2.32.*",
    "simple-salesforce==1.12.*",
]

[dependency-groups]
dev = [
    "crc-bonfire<8",
    "mypy==1.*",
    "pre-commit==4.*",
    "pydocstyle==6.*",
    "pytest==8.*",
    "pytest-cov==7.*",
    "ruff==0.*",
]

[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"
