[project]
name = "distributors-backend"
description = "A barebones python app"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "dotenv==0.*",
    "fastapi[standard]==0.*",
    "pydantic-settings==2.*",
    "pyjks==20.*",
    "requests==2.*",
    "simple-salesforce==1.*",
]

[dependency-groups]
dev = [
    "crc-bonfire<8",
    "mypy==1.*",
    "pre-commit==4.*",
    "pydocstyle==6.*",
    "pytest==8.*",
    "pytest-cov==6.*",
    "ruff==0.*",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
